Add Jenkinsfile for updated crash pipeline