@@ -3,13 +3,13 @@ pipeline {
 
     environment {
         PATH = "/opt/apache-maven-3.9.6/bin:$PATH"
+        MAVEN_OPTS = "-Xmx1024m -XX:MaxPermSize=256m"
     }
 
     stages {
         stage("Build") {
             steps {
-                // Limit surefire forks to prevent VM crash
-                sh 'mvn clean deploy -Dsurefire.forkCount=1 -Dsurefire.reuseForks=false'
+                sh 'mvn clean install -Dsurefire.forkCount=1 -Dsurefire.reuseForks=false -DskipTests=false'
             }
         }
     }
